Fix spacing of writing instructions.
The instructions for SAT passages didn't have any spacing between
paragraphs. This change fixes that. (I also deleted a redundant CSS
rule).

Before:

{F125332}

After:

{F125331}

Test Plan:
Run `make subperseus` to update webapp, then do the following:

A.1) Go to /mission/sat while passing the show_sat_mvp Gandalf bridge
A.2) Click "READING & WRITING"
A.3) Scroll down and click on skill
A.4) See instructions with spacing like in screenshot

A.1) Go to /mission/sat/exams while passing the show_sat_mvp Gandalf
     bridge.
A.2) Open a Reading and Writing exam.
A.3) Click through all items.
A.4) See spacing like you'd expect for each passage item (where the top
     of the first questions lines up with the top of the passage's
     title). (This is checking for regressions)

Auditors: marcia

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -783,6 +783,8 @@ body.sat-section {
         }
 
         &.perseus-renderer-two-columns {
+            width: 1024px;
+
             // This prevents a strange blank space from appearing above
             // passages.
             // TODO(johnsullivan): Try and get rid of the wrapping div that's
@@ -791,13 +793,9 @@ body.sat-section {
                 margin: 0;
             }
 
-            width: 1024px;
-            & > .paragraph {
-                margin: 0;
-            }
             .perseus-column {
                 & > .paragraph {
-                    margin: 0;
+                    margin-top: 0;
                 }
                 overflow-y: auto;
                 &:nth-child(1) {
